# quick-search-lib

./: Cargo.toml
src/: chars.rs  config.rs  lib.rs  logging.rs
