[package]
name = "quick-search-lib"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leaky-loader"]
leaky-loader = []
debug = []

[dependencies]
abi_stable = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
